# egz1-biblioteka

./: .gitignore  README.md  pyproject.toml
docs/: requirements.txt
egz1_biblioteka/: main.py
egz1_biblioteka/classes/: author.py  book.py  booking_record.py  genre.py  library.py  user.py  users.py
egz1_biblioteka/data/: create_predefined_library.py  def_books.py  def_library.py
tests/: dbdiagram.io.d.txt
