[tool.poetry]
name = "egz1-biblioteka"
version = "0.1.0"
description = ""
authors = ["student-d-k <daumantas.kudzma@codeacademylt.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
